--- a/src/styles/viewer.scss
+++ b/src/styles/viewer.scss
@@ -125,6 +125,7 @@
   max-height: 400px;
   overflow-y: scroll;
   position: absolute;
+  top: 56px;
   transform: scale(1, 0);
   transform-origin: top left;
   transition: transform, 0.3s;
